--- a/css/cadastroUsuario.css
+++ b/css/cadastroUsuario.css
@@ -30,7 +30,7 @@
 .card button {
   width: 100%;
   padding: 0.75rem;
-  background-color: #0d6efd;
+  background-color: #1EA2B6;
   color: white;
   border: none;
   border-radius: 4px;
@@ -39,5 +39,5 @@
 }
 
 .card button:hover {
-  background-color: #0b5ed7;
+  background-color: #1EA2B6;
 }
